--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,3 +1,22 @@
 body {
   background-color: #4fc3f7;
 }
+
+.invalid {
+  animation: shake 0.2s ease-in-out 0s 2;
+}
+
+@keyframes shake {
+  0% {
+    margin-left: 0rem;
+  }
+  25% {
+    margin-left: 0.5rem;
+  }
+  75% {
+    margin-left: -0.5rem;
+  }
+  100% {
+    margin-left: 0rem;
+  }
+}
